[gd_scene load_steps=18 format=1]

[ext_resource path="res://files/scripts/residentslinescript.gd" type="Script" id=1]
[ext_resource path="res://files/buttons/stats.png" type="Texture" id=2]
[ext_resource path="res://files/buttons/statsdown.png" type="Texture" id=3]
[ext_resource path="res://files/buttons/inspect.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/inspectdown.png" type="Texture" id=5]
[ext_resource path="res://files/buttons/dig-dug.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/dig-dug (1).png" type="Texture" id=7]
[ext_resource path="res://files/buttons/actiondown.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/action.png" type="Texture" id=9]
[ext_resource path="res://files/buttons/sex.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/sexdown.png" type="Texture" id=11]
[ext_resource path="res://mainfont.tres" type="DynamicFont" id=12]
[ext_resource path="res://files/buttons/icons/stress/2.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="line" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 25.0
custom_constants/separation = 5
alignment = 0
script/script = ExtResource( 1 )

[node name="topbutton" type="Button" parent="." groups=[
"sortbutton",
]]

visibility/visible = false
rect/min_size = Vector2( 25, 25 )
hint/tooltip = "To Top"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 25.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "T"
flat = false

[node name="upbutton" type="Button" parent="." groups=[
"sortbutton",
]]

visibility/visible = false
rect/min_size = Vector2( 25, 25 )
hint/tooltip = "Up"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 55.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "U"
flat = false

[node name="downbutton" type="Button" parent="." groups=[
"sortbutton",
]]

visibility/visible = false
rect/min_size = Vector2( 25, 25 )
hint/tooltip = "Down"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 55.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "D"
flat = false

[node name="bottombutton" type="Button" parent="." groups=[
"sortbutton",
]]

visibility/visible = false
rect/min_size = Vector2( 25, 25 )
hint/tooltip = "To Bottom"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 25.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "B"
flat = false

[node name="actionbuttons" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 0.0
margin/top = 0.0
margin/right = 137.0
margin/bottom = 25.0
custom_constants/separation = 3
alignment = 0

[node name="stats" type="TextureButton" parent="actionbuttons"]

hint/tooltip = "Stats"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 25.6
margin/bottom = 25.6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 0.1 )
params/stretch_mode = 0

[node name="inspect" type="TextureButton" parent="actionbuttons"]

hint/tooltip = "Inspect"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 0.0
margin/right = 53.6
margin/bottom = 25.6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 0.1 )
params/stretch_mode = 0

[node name="regulations" type="TextureButton" parent="actionbuttons"]

hint/tooltip = "Rules and regulations"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 56.0
margin/top = 0.0
margin/right = 81.6
margin/bottom = 25.6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 0.1 )
params/stretch_mode = 0

[node name="actions" type="TextureButton" parent="actionbuttons"]

hint/tooltip = "Actions"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 0.0
margin/right = 109.6
margin/bottom = 25.6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 0.1 )
params/stretch_mode = 0

[node name="sexual" type="TextureButton" parent="actionbuttons"]

hint/tooltip = "Sexual actions"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 0.0
margin/right = 137.6
margin/bottom = 25.6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 0.1 )
params/stretch_mode = 0

[node name="slavename" type="HBoxContainer" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 142.0
margin/top = 0.0
margin/right = 287.0
margin/bottom = 25.0
custom_constants/separation = 45
alignment = 1

[node name="name" type="Button" parent="slavename"]

rect/min_size = Vector2( 145, 22 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 145.0
margin/bottom = 23.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.882813, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
clip_text = true
align = 0

[node name="statusbuttons" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 292.0
margin/top = 0.0
margin/right = 321.0
margin/bottom = 25.0
custom_constants/separation = 2
alignment = 2

[node name="portait" type="TextureFrame" parent="statusbuttons"]

visibility/visible = false
rect/min_size = Vector2( 25, 25 )
hint/tooltip = "portrait"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 25.0
margin/bottom = 25.0
expand = true
stretch_mode = 6

[node name="health" type="TextureButton" parent="statusbuttons"]

hint/tooltip = "Health"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="healthvalue" type="Label" parent="statusbuttons/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 4.0
margin/right = 21.0
margin/bottom = 18.0
text = "50"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="obedience" type="TextureButton" parent="statusbuttons"]

hint/tooltip = "Obedience"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 0.0
margin/right = 2.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="stress" type="TextureButton" parent="statusbuttons"]

hint/tooltip = "Stress"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 0.0
margin/right = 29.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 5

[connection signal="pressed" from="topbutton" to="." method="_on_topbutton_pressed"]

[connection signal="pressed" from="upbutton" to="." method="_on_upbutton_pressed"]

[connection signal="pressed" from="downbutton" to="." method="_on_downbutton_pressed"]

[connection signal="pressed" from="bottombutton" to="." method="_on_bottombutton_pressed"]

[connection signal="pressed" from="actionbuttons/stats" to="." method="_on_stats_pressed"]

[connection signal="pressed" from="actionbuttons/inspect" to="." method="_on_inspect_pressed"]

[connection signal="pressed" from="actionbuttons/regulations" to="." method="_on_regulations_pressed"]

[connection signal="pressed" from="actionbuttons/actions" to="." method="_on_actions_pressed"]

[connection signal="pressed" from="actionbuttons/sexual" to="." method="_on_cast_spell_pressed"]


